--- a/bastardcats.html
+++ b/bastardcats.html
@@ -1,2 +1,138 @@
-<h1> my first website</h1>
-<p>yessss</p>
+<!DOCTYPE html>
+<html>
+
+<a href="https://imgur.com/mXj6Py7"></a>
+<a href="https://imgur.com/zsNFc6K"></a>
+
+<style>
+
+body {
+background-color: #FAFAA5;
+}
+
+h1 {
+color: black;
+}
+
+
+.list-box {
+background-color: #F7E37E;
+border-color: #F0DC78;
+border-width: 5px;
+border-style: double;
+padding: 1px 5px 1px 5px;
+margin-top: 10px;
+}
+
+.heading1-box {
+background-color: #7BD7F3;
+padding: 4% 20% 4% 25%;
+margin: 0px;
+text-align: center;
+border-color: #52B6D4;
+border-width: 10px;
+border-style: solid;
+border-radius: 7px;
+}
+
+.smaller-image-odin {
+width: 400px;
+max-width: 100%;
+}
+
+.smaller-image-jamie {
+width: 600px;
+max-width: 100%;
+}
+
+.quiz-box {
+border-color: #F7C560;
+border-width: 5px;
+border-style: solid;
+border-radius: 7px;
+padding-left: 5px;
+margin-top: 15px;
+}
+
+.footer {
+	background-color: lightgrey;
+	border: 4px solid grey;
+	border-radius: 10px;
+	padding: 20px;
+	text-align: center;
+	margin: 10px;
+
+}
+
+</style>
+
+
+
+
+<head>
+
+<title>A testament of my love for my cats</title>
+</head>
+
+
+<body>
+
+<h1 class="heading1-box">How much I love my cats</h1>
+<h3>Boy howdy.</h3> <p>Am I gonna tell you all about how much I love these stupid cats of mine.<br>
+You're in for a wild ride.</p>
+
+<p>Listen up. We got these silly bastards for a little over 1 year and they are my life now.<br> And you're about to meet them.</p>
+
+<img class="smaller-image-odin" src="https://i.imgur.com/mXj6Py7.jpg" alt="a bastard cat named Odin." title="Look at this stupid face" />
+<p>This fluffy bastard is named Odin</p>
+
+<img class="smaller-image-jamie" src="https://i.imgur.com/zsNFc6K.jpg" title="Only psychopaths would not love that face"/>
+<p>And this lil angel is Jamie</p>
+
+<div class="list-box">
+<p>Now let me tell you a few things about Odin first:
+<ul>
+<li>He's a doofus</li>
+<li>He's scared about everything</li>
+<li>He screams</li>
+<li>I would give my life for him</li>
+<li>Needy bastard</li>
+</ul>
+All in all a good boy. He's trying. I think. I hope.</p>
+</div>
+<div class="list-box">
+<p>And also a few things about our sweet baby Jamie
+<ul>
+<li>She's an angel (stop me when you've heard this one before)</li>
+<li>A baby</li>
+<li>Impossible to have a non photogenetic pic</li>
+<li>Would also give my life for her</li>
+<li>Dainty lil lady</li>
+</ul>
+We scream she's adorable, no matter what she's doing. Probably very tired of us.</p>
+</div>
+
+<div class="quiz-box">
+<strong>Suprise test!</strong><br>Oooooh didn't expect to put effort in this, did ya?<br>
+Question Numero uno: What is Odin screaming about?
+<form action="/form-results">
+<label for="food"><input id="food" value="food" type="radio" name="odin-screams" checked>Food</label><br>
+<label for="pets"><input id="pets" value="pets" type="radio" name="odin-screams">Pets</label><br>
+<label for="curse"><input id="curse" value="curse" type="radio" name="odin-screams">A spell that will curse us for a 1000 years</label><br>
+<br>
+Question Numero two: Why is Jamie so cute? <br>
+<label for="effort"><input id="effort" value="effort" type="radio" name="jamie-cute" checked>She puts a lot of effort in to look cute</label><br>
+<label for="love"><input id="love" value="love" type="radio" name="jamie-cute">Because we love her</label><br>
+<label for="devil"><input id="devil" value="devil" type="radio" name="jamie-cute">She made a deal with the devil</label><br>
+<br>
+Last question: Will we ever have peace? <br>
+<label for="no"><input id="no" value="no" type="radio" name="peace" checked>No</label><br>
+<button type="submit">Submit</button><br><br>
+</form>
+
+
+</div>
+<footer class="footer">Made by a tired person. &copy;2020</footer>
+
+</body>
+</html>
