update for phone

--- a/bastardcats.html
+++ b/bastardcats.html
@@ -113,9 +113,10 @@ We scream she's adorable, no matter what she's doing. Probably very tired of us.
 </div>
 
 <div class="quiz-box">
-<strong>Suprise test!</strong><br>Oooooh didn't expect to put effort in this, did ya?<br>
-Question Numero uno: What is Odin screaming about?
 <form action="/form-results">
+
+<strong>SURPRISE TEST!</strong><br>Oooooh didn't expect to put effort in this, did ya?<br>
+Question Numero uno: What is Odin screaming about?<br>
 <label for="food"><input id="food" value="food" type="radio" name="odin-screams" checked>Food</label><br>
 <label for="pets"><input id="pets" value="pets" type="radio" name="odin-screams">Pets</label><br>
 <label for="curse"><input id="curse" value="curse" type="radio" name="odin-screams">A spell that will curse us for a 1000 years</label><br>
@@ -132,7 +133,7 @@ Last question: Will we ever have peace? <br>
 
 
 </div>
-<footer class="footer">Made by a tired person. &copy;2020</footer>
+<footer class="footer">Made by a tired person. &copy; 2020</footer>
 
 </body>
 </html>
