--- a/bastardcats.html
+++ b/bastardcats.html
@@ -114,6 +114,7 @@ We scream she's adorable, no matter what she's doing. Probably very tired of us.
 </div>
 
 <div class="quiz-box">
+	<p>
 <form action="/form-results">
 
 <strong>SURPRISE TEST!</strong><br>Oooooh didn't expect to put effort in this, did ya?<br>
@@ -129,9 +130,9 @@ Question Numero two: Why is Jamie so cute? <br>
 <br>
 Last question: Will we ever have peace? <br>
 <label for="no"><input id="no" value="no" type="radio" name="peace" checked>No</label><br>
-<button type="submit">Submit</button><br><br>
+<button type="submit">Submit</button><br>
 </form>
-
+</p>
 
 </div>
 <footer class="footer">Made by a tired person. &copy; 2020</footer>
