added meta line

--- a/bastardcats.html
+++ b/bastardcats.html
@@ -71,7 +71,7 @@ font-size: 16px;
 
 
 <head>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>A testament of my love for my cats</title>
 </head>
 
