updated padding header

--- a/bastardcats.html
+++ b/bastardcats.html
@@ -26,13 +26,14 @@ margin-top: 10px;
 
 .heading1-box {
 background-color: #7BD7F3;
-padding: 4% 20% 4% 25%;
+padding: 4% 10% 4% 10%;
 margin: 0px;
 text-align: center;
 border-color: #52B6D4;
 border-width: 10px;
 border-style: solid;
 border-radius: 7px;
+max-width: 100%;
 }
 
 .smaller-image-odin {
